<resources>
    <string name="app_name">Şişe Çevirmece</string>
    <string name="splash_screen_resmi">Splash screen resmi</string>
    <string name="oyuna_basla">Oyuna Başla</string>
    <string name="sorulari_goruntule">Soruları Görüntüle</string>
    <string name="cesaret">Cesaret</string>
    <string name="dogruluk">Doğruluk</string>
    <string name="sise_donuyor">Şişe Dönüyor</string>
    <string name="dogruluk_sorularini_goruntule">Doğruluk Sorularını Görüntüle</string>
    <string name="cesaret_sorularini_goruntule">Cesaret Sorularını Görüntüle</string>
    <string name="kola_sisesi">Kola Şişesi</string>
    <string name="viski_sisesi">Viski Şişesi</string>
    <string name="sarap_sisesi">Şarap Şişesi</string>
    <string name="gazoz_sisesi">Gazoz Şişesi</string>
    <string name="surum">Sürüm 1.1</string>
    <string name="basla">Başla</string>
    <string name="sorular">Sorular</string>
    <string name="ayarlar">Ayarlar</string>
    <string name="bizi_oyla">Bizi Oyla</string>
    <string name="soruyu_ben_soracagim">Soruyu ben soracağım</string>
    <string name="sise_turu">Şişe Türü</string>
    <string name="cola">Cola</string>
    <string name="sarap">Şarap</string>
    <string name="viski">Viski</string>
    <string name="gazoz">Gazoz</string>
    <string name="ornek_soru_1">Odadaki en güzel kız kim?</string>
    <string name="cevaplandi">Cevaplandı</string>
    <string name="soru_degistir">Soru Değiştir</string>
    <string name="soru_ekle">Soru Ekle</string>
    <string name="soruyu_yazin">Soruyu Yazın</string>
    <string name="soruyu_kaydet">Soruyu Kaydet</string>
    <string name="sorulari_karistir">Soruları Karıştır</string>
    <string name="kaydet">Kaydet</string>
    <string name="Sil">sil</string>
    <string name="dogruluk_sorulari">Doğruluk Soruları</string>
    <string name="oyunu_sifirla">Oyunu Sıfırla</string>
    <string name="iptal_et">İptal Et</string>
    <string name="oyun_verileri_silme">Oyun verileri silinsin mi? \nEklemiş olduğunuz sorular ve oyun ayarları sıfırlanacaktır.</string>
    <string name="sifirlandi">Sıfırlandı</string>
    <string name="iptal_edildi">İptal Edildi</string>
    <string name="silmek_icin_uzun_bas">SİLMEK VEYA DÜZENLEMEK İÇİN UZUN BASIN</string>
    <string name="soru_kayit_basarili">Kayıt Başarılı</string>
    <string name="soru_kayit_hatali">Girilen soruyu kontrol ediniz.</string>
    <string name="icecek_ismi">kola</string>
    <string name="feedback">Feedback</string>
    <string name="email">Email</string>
    <string name="gorus_oneri_sorun">Görüş/Öneri/Sorun</string>
    <string name="gonder">Gönder</string>
    <string name="reklam_gosterilsin_mi">Reklam izleyerek soru kazanabilirsiniz.Ekstra soru kazanmak ister misiniz?</string>
    <string name="evet">Evet</string>
    <string name="hayir">Hayır</string>
    <string name="odul_alindi">Ödül alındı</string>
    <string name="reklam_yuklenemedi">Reklam yüklenemedi</string>
    <string name="reklam_kapatildi">Reklam kapatıldı</string>
    <string name="uygulamadan_cikildi">Uygulamadan çıkıldı</string>
    <string-array name="cesaretListesi">
        <item>"Alfabeyi tersten oku."</item>
        <item>"Gözlerini bağla, bir oyuncuyla yavaşça dans et ve dokunarak kim olduğunu tahmin et."</item>
        <item>"İnsandan battaniye ol ve birini ısıt."</item>
        <item>"Bir paspas veya süpürge ile dans et"</item>
        <item>"Solundaki kişi sana bir tokat atsın."</item>
        <item>"Biriyle nasıl flört edeceğini göster."</item>
        <item>"Komşularına bağır: “Bir sessiz olun be!”"</item>
        <item>"İki kolunun üzerine tükenmez kalem ile “Ben bir çomarım” yaz"</item>
        <item>"Whatsapp'da mesajlaştığın son üç kişiye “Seni seviyorum” diye mesaj yolla."</item>
        <item>"Oyunculardan biri sana ruj sürsün."</item>
        <item>"Odadan birini seç ve onu öp."</item>
        <item>"Erkek ise; makyaj yap. Kız ise; makyajını temizle."</item>
        <item>"Tsirtünü çıkar ve 30 saniye boyunca gömlek dansı yap."</item>
        <item>"Bebek sesiyle favori şarkını söyle!"</item>
        <item>"Pencereyi aç ve sokaktaki birinin sana el sallamasını sağla"</item>
        <item>"Sonraki 3 tur boyunca istenen bir şiveyle konuş."</item>
        <item>"Sihirbazlık yap."</item>
        <item>"Ardı ardına dört takla at."</item>
        <item>"5 dakika boyunca oyundaki birinin evcil hayvanı ol."</item>
        <item>"30 saniye boyunca dilediğin müzik türünde dans etm."</item>
        <item>"Herhangi bir kesme ve kırpma işlemi yapılmadan bir kişinin saçını yeniden şekillendir."</item>
        <item>"3 dakika boyunca solucan gibi hareket et"</item>
        <item>"3 dakika boyunca bir bebek taklidi yap."</item>
        <item>"Müziğin ritmine ayak uydurarak göbek dansı yap."</item>
        <item>"Erkekse bir kızın makyajını yıka,kızsa erkeğe makyaj yap."</item>
        <item>"3 dakika boyunca müzik olmadan dans et."</item>
        <item>"Bardağı hiç ağızdan çekmeden ardı ardına 3 bardak su iç."</item>
        <item>"Cesaret diyen kişinin utandırıcı bir poz vermesini iste ve paylaş."</item>
        <item>"1 bardak asitli içeceği/meyve suyunu bir dikişte iç."</item>
        <item>"Gruptan seçilen bir kişinin makyaj malzemesiyle vücuduna bir şey yaz."</item>
        <item>"5 dakika boyunca çeşitli egzersizler yap."</item>
        <item>"Grupta yer alan herkesin 1 dakika boyunca telefonunu karıştır."</item>
        <item>"3 dakika boyunca bir ünlüyü taklit et."</item>
        <item>"Ellerinin üzerinde evi dolaş."</item>
        <item>"Gruptan birini seç ve yüzüne tokat atsın."</item>
        <item>"Oyun devam ederken 3 dakika boyunca belinde hayali bir halka varmış gibi onu çevir."</item>
        <item>"Grubun ortaya koyduğu bir konu etrafında sekiz satır ve iki mısralık bir şiir yaz."</item>
        <item>"Dışarı çık ve karşına çıkan ilk kişiyi korkut."</item>
        <item>"Oyundaki kişilerin ortak kararıyla gruptan birini öp."</item>
        <item>"5 dakika boyunca bir arkadaşına masaj yap."</item>
        <item>"Dışarı çık ve sokaktan geçen herhangi birine komik bir şey anlat."</item>
        <item>"5 dakika boyunca oyundaki bir kişinin kölesi ol."</item>
        <item>"Bir süpürgeyle veya paspas ile dans et."</item>
        <item>"Bir manken gibi kedi yürüyüşü yap."</item>
        <item>"Ağzını hareket ettirmeden baştan sona alfabeyi oku."</item>
        <item>"Gözlerini kapat ve oyundaki herhangi birinin yüzüne dokunup kim olduğunu tahmin et."</item>
        <item>"Sağında yer alan oyuncu hakkında bir hikaye uydur."</item>
        <item>"Oyundaki herhangi birine ayak masajı yap."</item>
        <item>"Bir köpek gibi 6 kez havla."</item>
        <item>"Bir şarkıyı baştan sona söyle."</item>
        <item>"En sevdiğin şarkıyla çılgınca dans et."</item>
        <item>"Bir dakika boyunca gözünü kırpmadan bekle."</item>
        <item>"Çıktığın en kötü ve en iyi kişiyi açıkla."</item>
        <item>"Bir dakika boyunca karşı cinsten biri gibi yürü."</item>
        <item>"Sevgiline atıp atabileceğin en acımasız mesajı gönder."</item>
        <item>"Birkaç tur boyunca biriyle el ele tutuş."</item>
        <item>"Oyunda yer alan her kişi hakkında bildiğin komik bir şey anlat."</item>
        <item>"Birkaç tur boyunca farklı bir dilde konuş."</item>
        <item>"Telefondaki tarayıcı geçmişini herkese göster."</item>
        <item>"Odadan birisi için satın alacakmış gibi iç çamaşırı araştırması yap."</item>
        <item>"Yaşlı bir kadın ya da yaşlı bir adam gibi davran"</item>
        <item>"1 dakika tavuk gibi davran"</item>
        <item>"Ayakkabı iplerinizi birbirine bağlayın ve geriye doğru yürümeye çalışın"</item>
        <item>"Bir sonraki sıraya kadar bir bebek gibi davran"</item>
        <item>"En sevdiğin süper kahraman gibi davran"</item>
        <item>"Senin sıran gelene kadar bir heykel gibi hareket et (konuşmadan veya hareket etmeden)"</item>
        <item>"Kedi gibi miyavla"</item>
        <item>"2 dakika uçak olduğunuzu farz et ve bir uçak gibi 2 dakika boyunca uç"</item>
        <item>"Telefonunu yanında ki kişiye ver. 5 dk boyunca her yere bakmak serbest."</item>
        <item>"Birine telefonunu ver ve istediği herhangi birine mesaj atsın."</item>
        <item>"Önümüzdeki 5 dakika içinde birinin hayvanı olun."</item>
        <item>"Seçtiğiniz bir sosyal medya hesabınızdan çok çirkin bir fotoğrafınızı paylaşın."</item>
        <item>"Mesaj yazma bölümünüzü telefonunuzdan açın gözlerinizi kapatın ve rasgele bir kişiye körü körüne bir metin gönderin."</item>
        <item>"Başkasının dişlerini fırçala."</item>
        <item>"İğrenç bir ses tonuyla şarkı söyle"</item>
        <item>"Yalandan bir şekilde 2 dakika boyunca ağla"</item>
        <item>"Rehberinden rastgele birini ara ve sonra yanlış aradım diye kapat"</item>
        <item>"1 dakika boyunca bir tavukmuşsun gibi davran"</item>
        <item>"İnstagramda çok saçma bir şey paylaş 5 dakika sonra sil !"</item>
        <item>"Bugün yaptığın bir şeyle alakalı uydurma kısa, komik bir hikaye anlat"</item>
        <item>"Birini ara ve karadeniz şivesiyle konuş"</item>
        <item>"Whatsapp ındaki son mesajlaşmanı bize oku"</item>
        <item>"Çok yüksek bir sesle 3 saniye bağır"</item>
        <item>"Sarhoş taklidi yap"</item>
        <item>"Hemen kısa bir aşk şiiri yazıp oku"</item>
        <item>"Yanındaki kişiye masaj yap"</item>
        <item>"30 saniyeliğine bir balerin gibi dans et"</item>
        <item>"Yüzüne çirkin ve iğrenç bir ifade ver"</item>
        <item>"Yere yat ve bir balık gibi davran"</item>
        <item>"1 dakikalığına köpek taklidi yap"</item>
        <item>"Rap şarkısı uydur ve söyle"</item>
        <item>"Kendi etrafında 10 defa hızlıca dön ve düz bir çizgide yürümeye çalış"</item>
        <item>"Tekrar sıran gelene kadar bir maymun gibi davran"</item>
        <item>"30 saniye boyunca opera şarkısı söylemeye çalış"</item>
        <item>"Telefonunun galerisinden son çektiğin 5 fotoğrafı göster"</item>
        <item>"Ağzında su varken şarkı söylemeye çalış"</item>
        <item>"Yanındaki kişinin yüzüne tükenmez kalemle bir şey çizmesine izin ver"</item>
        <item>"3 dakika boyunca tek ayak üzerinde bekle"</item>
        <item>"Çiğ soğan yemeye çalış"</item>
        <item>"3 dakika boyunca tavuk gibi davran"</item>
    </string-array>
</resources>