<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="dogrulukMu"
            type="Boolean" />

        <variable
            name="onClickBinding"
            type="com.frappeclub.sisecevirmece.binding.SorulariGoruntuleOnClickBinding" />

        <variable
            name="liste"
            type="java.util.List" />

    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/floor">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            app:cardBackgroundColor="#4CFFFFFF"
            app:cardCornerRadius="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/_sorularıGoruntule"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@{dogrulukMu ? `Doğruluk Soruları` : `Cesaret Soruları`}"
                    android:hint="@string/dogruluk_sorulari"
                    android:textColor="@android:color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.cardview.widget.CardView
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_margin="16dp"
                    app:cardBackgroundColor="#AEFFFFFF"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/cardSoruEkleButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/_sorularıGoruntule">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/sorularRecycler"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="16dp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSoruEkleButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:onClick="@{(view)->onClickBinding.soruEkle(view,dogrulukMu)}"
                    app:cardCornerRadius="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/cardSorulariKaristirButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/soru_ekle"
                        android:textColor="@color/sorularTextColor"
                        android:textSize="16sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardSorulariKaristirButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="16dp"
                    android:onClick="@{(view) -> onClickBinding.sorulariKaristir(view,dogrulukMu,liste)}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="8dp"
                        android:text="@string/sorulari_karistir"
                        android:textColor="@color/sorularTextColor"
                        android:textSize="16sp" />

                </androidx.cardview.widget.CardView>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.cardview.widget.CardView>

    </FrameLayout>


</layout>